WORK END: remove legacy files

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "68adedca",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "e14942ac",
    "metadata": {},
    "outputs": [
@@ -59,17 +59,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using existing parallel corpus: data/parallel/kazparc_kz_ru.csv\n",
+      "Using existing parallel corpus: data/parallel/kazparc_kz_ru.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertModel were not initialized from the model checkpoint at aneuraz/awesome-align-with-co and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Silver labels: data/labels/silver_word_labels.csv\n"
      ]
     }
    ],
    "source": [
     "from pathlib import Path\n",
+    "import importlib\n",
     "\n",
-    "from src.data.download_parallel import save_kz_ru\n",
-    "from src.pipeline.build_silver_labels import main as build_silver_labels\n",
-    "from cefr.alignment import EmbeddingAligner"
+    "from cefr import load_config\n",
+    "import cefr.alignment as alignment_mod\n",
+    "from cefr.data.download import save_kz_ru\n",
+    "from cefr.data.silver import build_silver_labels\n",
+    "\n",
+    "alignment_mod = importlib.reload(alignment_mod)\n",
+    "EmbeddingAligner = alignment_mod.EmbeddingAligner\n",
+    "\n",
+    "cfg = load_config()\n",
+    "\n",
+    "PARALLEL_PATH = Path('data/parallel/kazparc_kz_ru.csv')\n",
+    "if not PARALLEL_PATH.exists():\n",
+    "    PARALLEL_PATH = Path(\n",
+    "        save_kz_ru(\n",
+    "            split='train[:2000]',\n",
+    "            out_dir='data/parallel',\n",
+    "            out_name='kazparc_kz_ru.csv',\n",
+    "        )\n",
+    "    )\n",
+    "else:\n",
+    "    print(f\"Using existing parallel corpus: {PARALLEL_PATH}\")\n",
+    "\n",
+    "custom_aligner = EmbeddingAligner(cfg.pipeline.alignment)\n",
+    "\n",
+    "SILVER_PATH = Path('data/labels/silver_word_labels.csv')\n",
+    "if not SILVER_PATH.exists():\n",
+    "    SILVER_PATH = build_silver_labels(\n",
+    "        parallel_csv=PARALLEL_PATH,\n",
+    "        rus_cefr=cfg.pipeline.russian_cefr_path,\n",
+    "        out_csv=SILVER_PATH,\n",
+    "        aligner=custom_aligner,\n",
+    "    )\n",
+    "print(f\"Silver labels: {SILVER_PATH}\")"
    ]
   },
   {
@@ -84,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "48f148c3",
    "metadata": {},
    "outputs": [
@@ -191,7 +236,7 @@
        "4  При трансграничной перевозке опасные отходы до...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "ef2e162d",
    "metadata": {},
    "outputs": [
@@ -224,7 +269,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "646ac2dc",
    "metadata": {},
    "outputs": [
@@ -356,15 +401,13 @@
        "4  4.209424e-32    False  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from cefr.alignment import (\n",
-    "    EmbeddingAligner,\n",
-    "    AlignmentDiagnostics,\n",
     "    fraction_above_threshold,\n",
     "    informative_link_share,\n",
     "    is_informative,\n",
@@ -377,8 +420,8 @@
     "details = custom_aligner.diagnostics(\n",
     "    kz_words,\n",
     "    ru_words,\n",
-    "    layer=8,\n",
-    "    threshold=0.05,\n",
+    "    layer=cfg.pipeline.alignment.layer,\n",
+    "    threshold=cfg.pipeline.alignment.threshold,\n",
     ")\n",
     "details_matrix = details.to_dataframe(kz_words, ru_words)\n",
     "\n",
@@ -388,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "ba551ded",
    "metadata": {},
    "outputs": [
@@ -408,122 +451,12 @@
     "coverage = fraction_above_threshold(\n",
     "    sample_records,\n",
     "    custom_aligner,\n",
-    "    layer=8,\n",
-    "    thresh=0.05,\n",
+    "    layer=cfg.pipeline.alignment.layer,\n",
+    "    thresh=cfg.pipeline.alignment.threshold,\n",
     "    prob_threshold=prob_threshold,\n",
     ")\n",
     "print(f\"Informative link share: {share_correct:.3f}\")\n",
     "print(f\"Fraction above {prob_threshold:.2f} threshold on sample: {coverage:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c793b47",
-   "metadata": {},
-   "source": [
-    "## Text-Level Prediction Helper\n",
-    "\n",
-    "Use the lightweight notebook wrapper to classify custom Kazakh text and inspect token alignments."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "722d6a80",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted CEFR level: A1\n",
-      "Translation: Он читает книгу\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_kazakh_word</th>\n",
-       "      <th>id_russian_word</th>\n",
-       "      <th>kazakh_word</th>\n",
-       "      <th>russian_word</th>\n",
-       "      <th>cefr_level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Ол</td>\n",
-       "      <td>Он</td>\n",
-       "      <td>A1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>оқып</td>\n",
-       "      <td>читает</td>\n",
-       "      <td>Unknown</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>кітап</td>\n",
-       "      <td>книгу</td>\n",
-       "      <td>Unknown</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id_kazakh_word  id_russian_word kazakh_word russian_word cefr_level\n",
-       "0               0                0          Ол           Он         A1\n",
-       "1               2                1        оқып       читает    Unknown\n",
-       "2               1                2       кітап        книгу    Unknown"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from app import predict_notebook_view, rows_to_dataframe\n",
-    "\n",
-    "kazakh_example = \"Ол кітап оқып жатыр\"\n",
-    "russian_override = None  # provide manual translation if available\n",
-    "\n",
-    "prediction = predict_notebook_view(\n",
-    "    kazakh_example,\n",
-    "    russian_text=russian_override,\n",
-    "    use_ensemble=False,\n",
-    ")\n",
-    "\n",
-    "print(f\"Predicted CEFR level: {prediction.cefr_level}\")\n",
-    "print(f\"Translation: {prediction.translation}\")\n",
-    "rows_to_dataframe(prediction.rows)"
    ]
   },
   {
@@ -538,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "8adc52a8",
    "metadata": {},
    "outputs": [
@@ -645,7 +578,7 @@
        "4    0.760007  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,8 +596,8 @@
     "DATA_PATH = Path('data/text/kazparc_kz_ru_cefr_estimated.csv')\n",
     "\n",
     "if not MODEL_PATH.exists():\n",
-    "    cfg = TabularTrainingConfig(train_path=DATA_PATH, output_dir=MODEL_DIR)\n",
-    "    train_tabular_model(cfg)\n",
+    "    tabular_cfg = TabularTrainingConfig(train_path=DATA_PATH, output_dir=MODEL_DIR)\n",
+    "    train_tabular_model(tabular_cfg)\n",
     "\n",
     "classifier = load(MODEL_PATH)\n",
     "metrics = json.loads(METRICS_PATH.read_text()) if METRICS_PATH.exists() else None\n",
@@ -688,14 +621,6 @@
     "    'pred_cefr': preds,\n",
     "    'confidence': confidence,\n",
     "})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8beca014",
-   "metadata": {},
-   "source": [
-    "Set a random seed or slice the dataframe differently to inspect additional examples."
    ]
   }
  ],
